fixed dark mode on navTabs and donation containers

--- a/revclient/src/views/DashboardV2/DashboardComponents/DashNav/DashNav.scss
+++ b/revclient/src/views/DashboardV2/DashboardComponents/DashNav/DashNav.scss
@@ -28,6 +28,13 @@ section.dashboard-dash-nav.section {
         border-bottom: 1px solid white;
     }
 }
-
-// .dark-mode {
-// }
+.dark-mode {
+    section.dashboard-dash-nav.section {
+        .tab {
+            color: $snow-white;
+        }
+        .active-tab {
+            color: $black-void;
+        }
+    }
+}
