--- a/revclient/src/views/DashboardV2/DashboardComponents/Donations/Donation.scss
+++ b/revclient/src/views/DashboardV2/DashboardComponents/Donations/Donation.scss
@@ -37,14 +37,12 @@ section.dashboard-donation-card.section {
         }
     }
 }
-
-
-
-
-// 	.dark-mode section.dashboard-donation-card.section {
-// 		background-color: $bleached-black;
-// 		.dashboard-donation-container {
-//
-// 		}
-// 	}
+.dark-mode {
+    section.dashboard-donation-card.section {
+        .dashboard-donation-container {
+            background-color: $bleached-black;
+            color: $snow-white;
+        }
+    }
+}
 
